k8s/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: complete-angular-16-service
# spec:
#   selector:
#     app: complete-angular-16
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 4000
#   type: LoadBalancer

apiVersion: v1
kind: Service
metadata:
  name: complete-angular-16-service
spec:
  selector:
    app: complete-angular-16
  ports:
    - protocol: TCP
      port: 80         # External access port
      targetPort: 4000 # Container's port
      nodePort: 30080  # (Optional) Port on the node (must be between 30000-32767)
  type: NodePort
